# nia

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  nia.pc  nia.pc.in  release.py  test.cpp
benchmark/basic_rectangle/: README.md  args.h  glut.cpp  nia.cpp  sdl.cpp  sfml.cpp
common/: common.mk
examples/: test.cpp
examples/basic_batch_renderer/: main.cpp
examples/basic_diffuse_light/: main.cpp
examples/basic_filters/: main.cpp
examples/basic_font_rendering/: Makefile  main.cpp
examples/basic_mesh_import/: main.cpp
examples/basic_mesh_render/: main.cpp
examples/basic_renderer/: main.cpp
examples/basic_skybox/: main.cpp
examples/basic_skybox_reflection/: main.cpp
examples/demo_filters/: main.cpp
examples/demo_particles/: main.cpp
examples/demo_reflection/: main.cpp
include/: nia.h  nia_array.h  nia_batch_renderer_gl.h  nia_bmp_parser.h  nia_constants.h  nia_cube_texture.h  nia_event.h  nia_export.h  nia_filter.h  nia_font_renderer_gl.h  nia_frame_buffer.h  nia_general.h  nia_gl.h  nia_light.h  nia_loader.h  nia_matrix.h  nia_mesh.h  nia_post_processing_pipeline.h  nia_rectangle.h  nia_renderer.h  nia_renderer_gl.h  nia_scene.h  nia_shader.h  nia_shader_batch.h  nia_shader_cubemap.h  nia_shader_filter.h  nia_shader_font.h  nia_shader_quad.h  nia_shader_reflective.h  nia_sprite.h  nia_texture.h  nia_texture_gl.h  nia_texture_streaming.h  nia_texture_structures.h  nia_tga_parser.h  nia_transform.h  nia_vao.h  nia_vector.h  nia_vertex.h  nia_wgl.h  (+2 more)
include/arch/linux/: nia_event.h  nia_renderer.h  nia_window.h
include/arch/win32/: nia_event.h  nia_renderer.h  nia_renderer_gl.h  nia_window.h  nia_window_gl.h
include/arch/win32/khronos/: glcorearb.h  khrplatform.h  wglext.h
include/parsers/: nia_bmp_parser.h  nia_gif_parser.h  nia_obj_parser.h  nia_png_parser.h  nia_tga_parser.h  nia_ttf_parser.h
include/renderers/: nia_batch_renderer_gl.h  nia_font_renderer_gl.h  nia_renderer_gl.h
include/shaders/: nia_shader.h  nia_shader_add_blend.h  nia_shader_batch.h  nia_shader_cubemap.h  nia_shader_filter.h  nia_shader_font.h  nia_shader_quad.h  nia_shader_reflective.h
src/: nia_array.cpp  nia_batch_renderer_gl.cpp  nia_bmp_parser.cpp  nia_cube_texture.cpp  nia_event.cpp  nia_filter.cpp  nia_font_renderer_gl.cpp  nia_frame_buffer.cpp  nia_gl.cpp  nia_loader.cpp  nia_matrix.cpp  nia_mesh.cpp  nia_obj_parser.cpp  nia_post_processing_pipeline.cpp  nia_renderer.cpp  nia_renderer_gl.cpp  nia_scene.cpp  nia_shader.cpp  nia_shader_batch.cpp  nia_shader_cubemap.cpp  nia_shader_filter.cpp  nia_shader_font.cpp  nia_shader_quad.cpp  nia_shader_reflective.cpp  nia_sprite.cpp  nia_texture_gl.cpp  nia_texture_streaming.cpp  nia_tga_parser.cpp  nia_transform.cpp  nia_vector.cpp  nia_wgl.cpp  nia_window.cpp  nia_xgl.cpp
src/arch/linux/: nia_renderer.cpp  nia_window.cpp
src/arch/win32/: nia_renderer.cpp  nia_renderer_gl.cpp  nia_window.cpp  nia_window_gl.cpp
src/parsers/: nia_bmp_parser.cpp  nia_gif_parser.cpp  nia_obj_parser.cpp  nia_png_parser.cpp  nia_tga_parser.cpp  nia_ttf_parser.cpp
src/renderers/: nia_batch_renderer_gl.cpp  nia_font_renderer_gl.cpp  nia_renderer_gl.cpp
src/shaders/: nia_shader.cpp  nia_shader_add_blend.cpp  nia_shader_batch.cpp  nia_shader_cubemap.cpp  nia_shader_filter.cpp  nia_shader_font.cpp  nia_shader_quad.cpp  nia_shader_reflective.cpp
tests/matrix_test/test_addition/: main.cpp
tests/vector_test/test_misc/: Makefile  main.cpp
